<resources>
    <string name="app_name">Calculadora</string>
    <string name="editText">Result</string>
    <string name="button1">9</string>
    <string name="button2">8</string>
    <string name="button3">7</string>
    <string name="button4">/</string>
    <string name="button5">6</string>
    <string name="button6">5</string>
    <string name="button7">4</string>
    <string name="button8">X</string>
    <string name="button9">3</string>
    <string name="button10">2</string>
    <string name="button11">1</string>
    <string name="button12">-</string>
    <string name="button13">.</string>
    <string name="button14">0</string>
    <string name="button15">=</string>
    <string name="button16">+</string>
    <string name="button17">AC</string>
    <string name="button18">sin</string>
    <string name="button19">cos</string>
    <string name="button20">^</string>
</resources>
